[package]
name = "solfunmeme_playground"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
publish = false

[dependencies]
dioxus = { version = "0.6.3", features = ["router"] }
dioxus-router = "0.6.3"
dioxus-web = "0.6.3"
dioxus-html = "0.6.3"
dioxus-logger = "0.6.2"
dioxus-motion = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
log = "0.4.21"
anyhow = "1.0"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Window", "Navigator", "Storage", "Event", "InputEvent", "EventTarget", "HtmlInputElement", "KeyboardEvent", "Document", "Element", "HtmlAnchorElement", "Clipboard", "console"] }
gloo = "0.11.0"
gloo-net = "0.5.0"
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-utils = "0.2.0"
js-sys = "0.3.69"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "js", "rng-getrandom", "rng-rand"] }
bs58 = "0.5.1"
qrcodegen = "1.8.0"
markdown = "1.0.0"
pulldown-cmark = "0.13.0"
regex = "1.10.4"
url = "2.5.4"
percent-encoding = "2.3.1"
csv = "1.3.1"
ndarray = "0.15.6"
tclifford = "0.1.0"
linfa = "0.7.1"
linfa-preprocessing = "0.7.1"
linfa-reduction = "0.7.1"
linfa-clustering = "0.7.1"
rust-embed = { version = "8.7.2", features = ["debug-embed"] }
fastrand = "2.0.1"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
emojis = "0.7.0"
urlencoding = "2.1.3"
scraper = "0.23.1" 